config/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: podzone-ingress
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: public
  tls:
  - hosts:
    - musings.thruhere.net
    secretName: musings-cert
  rules:
#  - host: musings.thruhere.net
  - http:
      paths:
      - backend:
         service:
           name: apache-service
           port:
             number: 80
        path: /
        pathType: Prefix
